--- a/shims/emr770/driver/pom.xml
+++ b/shims/emr770/driver/pom.xml
@@ -29,8 +29,14 @@
     <awssdk.version>2.28.27</awssdk.version>
     <commons-configuration2.version>2.10.1</commons-configuration2.version>
     <curator.version>5.6.0</curator.version>
+    <slf4j.version>1.7.36</slf4j.version>
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-reload4j</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.thrift</groupId>
       <artifactId>libthrift</artifactId>
