--- a/shims/emr521/driver/pom.xml
+++ b/shims/emr521/driver/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.pentaho.hadoop.shims</groupId>
     <artifactId>pentaho-hadoop-shims-emr521-reactor</artifactId>
-     <version>11.1.0.0-SNAPSHOT</version>
+     <version>11.1.0.0-42</version>
   </parent>
 
   <artifactId>pentaho-hadoop-shims-emr521</artifactId>
-   <version>11.1.0.0-SNAPSHOT</version>
+   <version>11.1.0.0-42</version>
   <packaging>jar</packaging>
 
   <properties>
