--- a/shims/cdpdc71/pmr/pom.xml
+++ b/shims/cdpdc71/pmr/pom.xml
@@ -14,7 +14,7 @@
 
   <properties>
     <org.apache.hbase.version>2.4.17.7.3.1.0-197</org.apache.hbase.version>
-    <org.apache.hbase.thirdparty.version>4.1.5.7.3.1.0-197</org.apache.hbase.thirdparty.version>
+    <org.apache.hbase.thirdparty.version>4.1.10</org.apache.hbase.thirdparty.version>
     <io.opentelemetry.version>0.12.0</io.opentelemetry.version>
   </properties>
   <dependencies>
