--- a/shims/cdpdc71/driver/pom.xml
+++ b/shims/cdpdc71/driver/pom.xml
@@ -32,7 +32,10 @@
     <joda-time.version>2.10</joda-time.version>
     <jython.version>2.5.3</jython.version>
     <org.apache.knox.version>2.0.0.7.3.1.0-197</org.apache.knox.version>
-    <gcs-connector.version>hadoop2-1.9.17</gcs-connector.version>
+    <gcs-connector.version>hadoop2-2.2.24</gcs-connector.version>
+    <google-api.version>1.33.2</google-api.version>
+    <google-http-client.version>1.41.7</google-http-client.version>
+    <google-api-services-storage.version>v1-rev20220705-1.32.1</google-api-services-storage.version>
     <google-oauth.version>1.33.3</google-oauth.version>
     <commons-configuration2.version>2.10.1</commons-configuration2.version>
     <wildfly-openssl.version>1.1.3.Final</wildfly-openssl.version>
@@ -304,10 +307,39 @@
       <artifactId>google-oauth-client</artifactId>
       <version>${google-oauth.version}</version>
     </dependency>
+    <!-- GCS connector and required Google API client libraries -->
     <dependency>
       <groupId>com.google.cloud.bigdataoss</groupId>
       <artifactId>gcs-connector</artifactId>
       <version>${gcs-connector.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>${google-api.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client-java6</artifactId>
+      <version>${google-api.version}</version>
+    </dependency>
+    <!-- BAD-1992: Required by gcs-connector for JSON serialization -->
+    <dependency>
+      <groupId>com.google.http-client</groupId>
+      <artifactId>google-http-client-jackson2</artifactId>
+      <version>${google-http-client.version}</version>
+    </dependency>
+    <!-- BAD-1992: Required by gcs-connector for GCS Storage API -->
+    <dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-storage</artifactId>
+      <version>${google-api-services-storage.version}</version>
+    </dependency>
+    <!-- Required by gcs-connector for OAuth authentication -->
+    <dependency>
+      <groupId>com.google.oauth-client</groupId>
+      <artifactId>google-oauth-client-java6</artifactId>
+      <version>${google-oauth.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
